// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div>
  <p
    className="spacer-bottom"
  >
    webhooks.delivery.response_x.200
  </p>
  <p
    className="spacer-bottom"
  >
    webhooks.delivery.duration_x.20ms
  </p>
  <p
    className="spacer-bottom"
  >
    webhooks.delivery.payload
  </p>
  <DeferredSpinner
    className="spacer-left spacer-top"
    loading={false}
    timeout={100}
  >
    <CodeSnippet
      noCopy={true}
      snippet="{ status: \\"SUCCESS\\" }"
    />
  </DeferredSpinner>
</div>
`;

exports[`should render correctly when no http status 1`] = `
<div>
  <p
    className="spacer-bottom"
  >
    webhooks.delivery.response_x.webhooks.delivery.server_unreachable
  </p>
  <p
    className="spacer-bottom"
  >
    webhooks.delivery.duration_x.20ms
  </p>
  <p
    className="spacer-bottom"
  >
    webhooks.delivery.payload
  </p>
  <DeferredSpinner
    className="spacer-left spacer-top"
    loading={false}
    timeout={100}
  >
    <CodeSnippet
      noCopy={true}
      snippet="{ status: \\"SUCCESS\\" }"
    />
  </DeferredSpinner>
</div>
`;

exports[`should render correctly when no payload 1`] = `
<div>
  <p
    className="spacer-bottom"
  >
    webhooks.delivery.response_x.200
  </p>
  <p
    className="spacer-bottom"
  >
    webhooks.delivery.duration_x.20ms
  </p>
  <p
    className="spacer-bottom"
  >
    webhooks.delivery.payload
  </p>
  <DeferredSpinner
    className="spacer-left spacer-top"
    loading={true}
    timeout={100}
  />
</div>
`;
